--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 								</span>
 								<div class="desc">
 									<h3>Innovative Ideas</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Proficient in implementing cutting-edge development techniques to create unique and engaging web solutions. Skilled in leveraging the latest technologies to enhance functionality and user experience.</p>
 								</div>
 							</div>
 						</div>
