--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 					               </div>
 					               <div class="timeline-label">
 					               	<h2><a href="#">Analyst Programmer</a> <span>2023 November - Present</span></h2>
-					                  <p>During my role as an Analyst Programmer at <b>KBZMS General Insurance</b>, my responsibilities primarily revolve around frontend web development for the Insurance Digital Core System. Specializing in Angular, I spearhead the development and refinement of UI designs, ensuring an intuitive and visually appealing user experience. Additionally, I actively engage in API integration tasks, collaborating closely with backend developers to seamlessly connect the frontend interface with the system's backend functionalities. Through this multifaceted approach, I contribute to the enhancement and optimization of our digital insurance platform, aligning it with industry standards and meeting the evolving needs of our users.</p>
+					                  <p>During my role as an Analyst Programmer at <b>KBZMS General Insurance</b>, my responsibilities primarily revolve around frontend web development for the Insurance Digital Core Systems. Specializing in Angular, I spearhead the development and refinement of UI designs, ensuring an intuitive and visually appealing user experience. Additionally, I actively engage in API integration tasks, collaborating closely with backend developers to seamlessly connect the frontend interface with the system's backend functionalities. Through this multifaceted approach, I contribute to the enhancement and optimization of our digital insurance platform, aligning it with industry standards and meeting the evolving needs of our users.</p>
 					               </div>
 					            </div>
 					         </article>
